# collect_open_source_data/openapi.yaml
@@ -40,7 +40,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/open_source.v1.LanguageReply'
+                                $ref: '#/components/schemas/LanguageReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /owner:
         get:
             tags:
@@ -85,7 +91,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/open_source.v1.OwnerReply'
+                                $ref: '#/components/schemas/OwnerReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /repo:
         post:
             tags:
@@ -95,7 +107,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/open_source.v1.RepoRequest'
+                            $ref: '#/components/schemas/RepoRequest'
                 required: true
             responses:
                 "200":
@@ -103,7 +115,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/open_source.v1.RepoReply'
+                                $ref: '#/components/schemas/RepoReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /repo/bycategory:
         get:
             tags:
@@ -133,7 +151,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/open_source.v1.RepoByCategoryReply'
+                                $ref: '#/components/schemas/RepoByCategoryReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /repo/category:
         get:
             tags:
@@ -168,7 +192,37 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/open_source.v1.RepoCategoryReply'
+                                $ref: '#/components/schemas/RepoCategoryReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /repo/fav:
+        put:
+            tags:
+                - OpenSource
+            operationId: OpenSource_RepoFav
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/RepoFavRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/RepoFavReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /repo/measure:
         get:
             tags:
@@ -211,10 +265,24 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/open_source.v1.RepoMeasureReply'
+                                $ref: '#/components/schemas/RepoMeasureReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
-        open_source.v1.LanguageInfo:
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        LanguageInfo:
             type: object
             properties:
                 id:
@@ -235,7 +303,7 @@ components:
                 bio:
                     type: string
                     description: 语言简介
-        open_source.v1.LanguageReply:
+        LanguageReply:
             type: object
             properties:
                 pageNum:
@@ -251,9 +319,9 @@ components:
                 languages:
                     type: array
                     items:
-                        $ref: '#/components/schemas/open_source.v1.LanguageInfo'
+                        $ref: '#/components/schemas/LanguageInfo'
                     description: 语言信息
-        open_source.v1.OwnerInfo:
+        OwnerInfo:
             type: object
             properties:
                 id:
@@ -298,7 +366,7 @@ components:
                 updatedAt:
                     type: string
                     description: 用户更新时间
-        open_source.v1.OwnerReply:
+        OwnerReply:
             type: object
             properties:
                 pageNum:
@@ -314,9 +382,9 @@ components:
                 owners:
                     type: array
                     items:
-                        $ref: '#/components/schemas/open_source.v1.OwnerInfo'
+                        $ref: '#/components/schemas/OwnerInfo'
                     description: 开源仓库信息
-        open_source.v1.QueryFilter:
+        QueryFilter:
             type: object
             properties:
                 targetValue:
@@ -331,7 +399,7 @@ components:
                     type: string
                     description: 筛选字段
             description: 查询条件
-        open_source.v1.RepoByCategoryReply:
+        RepoByCategoryReply:
             type: object
             properties:
                 pageNum:
@@ -347,9 +415,9 @@ components:
                 repos:
                     type: array
                     items:
-                        $ref: '#/components/schemas/open_source.v1.RepoInfo'
+                        $ref: '#/components/schemas/RepoInfo'
                     description: 开源仓库信息
-        open_source.v1.RepoCategoryInfo:
+        RepoCategoryInfo:
             type: object
             properties:
                 id:
@@ -364,7 +432,7 @@ components:
                 imageUrl:
                     type: string
                     description: 分类的图片
-        open_source.v1.RepoCategoryReply:
+        RepoCategoryReply:
             type: object
             properties:
                 pageNum:
@@ -380,9 +448,24 @@ components:
                 category:
                     type: array
                     items:
-                        $ref: '#/components/schemas/open_source.v1.RepoCategoryInfo'
+                        $ref: '#/components/schemas/RepoCategoryInfo'
                     description: 语言信息
-        open_source.v1.RepoInfo:
+        RepoFavReply:
+            type: object
+            properties: {}
+        RepoFavRequest:
+            type: object
+            properties:
+                repoIds:
+                    type: array
+                    items:
+                        type: string
+                    description: 仓库id
+                isFav:
+                    type: integer
+                    description: 是否收藏 0是收藏, 1 是取消收藏
+                    format: int32
+        RepoInfo:
             type: object
             properties:
                 id:
@@ -462,13 +545,16 @@ components:
                 forks:
                     type: string
                     description: 仓库分支数量
+                isFav:
+                    type: boolean
+                    description: 是否收藏
                 createdAt:
                     type: string
                     description: 仓库创建时间
                 updatedAt:
                     type: string
                     description: 更新时间
-        open_source.v1.RepoMeasureReply:
+        RepoMeasureReply:
             type: object
             properties:
                 pageNum:
@@ -485,9 +571,9 @@ components:
                 repos:
                     type: array
                     items:
-                        $ref: '#/components/schemas/open_source.v1.RepoInfo'
+                        $ref: '#/components/schemas/RepoInfo'
                     description: 开源仓库信息
-        open_source.v1.RepoReply:
+        RepoReply:
             type: object
             properties:
                 pageNum:
@@ -503,9 +589,9 @@ components:
                 repos:
                     type: array
                     items:
-                        $ref: '#/components/schemas/open_source.v1.RepoInfo'
+                        $ref: '#/components/schemas/RepoInfo'
                     description: 开源仓库信息
-        open_source.v1.RepoRequest:
+        RepoRequest:
             type: object
             properties:
                 pageNum:
@@ -534,13 +620,13 @@ components:
                 filters:
                     type: array
                     items:
-                        $ref: '#/components/schemas/open_source.v1.QueryFilter'
+                        $ref: '#/components/schemas/QueryFilter'
                     description: 筛选条件
                 sort:
                     allOf:
-                        - $ref: '#/components/schemas/open_source.v1.SortOrder'
+                        - $ref: '#/components/schemas/SortOrder'
                     description: 排序条件
-        open_source.v1.SortOrder:
+        SortOrder:
             type: object
             properties:
                 order:
@@ -551,5 +637,21 @@ components:
                     type: string
                     description: 排序字段
             description: 排序条件
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
+                message:
+                    type: string
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
     - name: OpenSource
